kubernetes/apps/freshrss/app/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app freshrss
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  serviceName: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      # requires root(??)
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: false
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: docker.io/freshrss/freshrss:1.26.2
          name: *app
          ports:
            - containerPort: 80
              name: http
          livenessProbe: &probes
            httpGet:
              path: /i/
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe: *probes
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            # chmods everything
            readOnlyRootFilesystem: false
          volumeMounts:
            - name: config
              mountPath: /var/www/FreshRSS/data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: *app
