kubernetes/apps/freshrss/app/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: &app freshrss
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *app
  serviceName: *app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *app
    spec:
      containers:
        - image: docker.io/freshrss/freshrss:1.26.2 # {"$imagepolicy": "flux-system:freshrss"}
          name: *app
          readinessProbe:
            httpGet:
              path: /i/
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: data
              mountPath: /var/www/FreshRSS/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        storageClassName: rook-ceph-block
