kubernetes/apps/freshrss/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app freshrss
  labels:
    app.kubernetes.io/name: *app
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rss.${domain}.${tld}`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: traefik
      services:
        - kind: Service
          name: *app
          port: 80
